Fixed bootstrap's -sm font size, added collapse-header toggler utility

--- a/src/resources/assets/sass/_bootstrap-variables.sass
+++ b/src/resources/assets/sass/_bootstrap-variables.sass
@@ -51,6 +51,7 @@ $body-bg:                         $white
 // Font, line-height, and color for body text, headings, and more.
 
 $font-size-base:                  0.875rem
+$font-size-sm:                    0.75rem
 $headings-font-weight:            600
 
 // Breadcrumbs
